# LibInterceptor

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/tencent/interceptor_lib_enhanced/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  config.cmake  export_function.txt  test.cpp  testglhook.c  testglhook.h  testlib.cpp  testlib.h  testxhook.c
app/src/main/cpp/ThreadPool/: CMakeLists.txt  FutureTask.hpp  thread_pool.cpp  thread_pool.hpp
app/src/main/cpp/gles/: CMakeLists.txt  dl_loader.cpp  get_gles_proc_address.cpp  log.cpp  target.h
app/src/main/cpp/include/: get_gles_proc_address.h  interceptor.h
app/src/main/cpp/lib/: CMakeLists.txt  code_generator.cc  code_generator.h  constant_pool_data_expr.cc  constant_pool_data_expr.h  disassembler.cc  disassembler.h  error.cc  interceptor.cc  linker.cc  target.cc  target.h
app/src/main/cpp/lib/AArch64/: target_aarch64.cc  target_aarch64.h
app/src/main/cpp/lib/ARM/: target_arm.cc
app/src/main/cpp/libxhook/: CMakeLists.txt  xh_jni.c
app/src/main/java/com/tencent/interceptor_lib_enhanced/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/tencent/interceptor_lib_enhanced/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
notes/: hook笔记.md
